- root directory didn't work for files inside jars - the URI resolve method does not work for files inside jars (so it is done manually with String operations)
git-svn-id: https://efaps.googlecode.com/svn/trunk@1055 fee104cc-1dfa-8c0f-632d-d3b7e6b59fb0